--- a/res/css/main.css
+++ b/res/css/main.css
@@ -15,15 +15,15 @@ html, body {
 /* Custom scrollbar styles */
 
 ::-webkit-scrollbar {
-    width: 14px;
+	width: 14px;
 }
  
 ::-webkit-scrollbar-track {
-    background: none;
+	background: none;
 }
  
 ::-webkit-scrollbar-thumb {
-    background: #828282;
+	background: #828282;
 	border-radius: 8px;
 	border: 4px solid #5e5e5e;
 }
@@ -39,6 +39,9 @@ section.leftContainerSection {
 	width: 240px;
 	position: fixed;
 	color: #a7a7a7;
+	top: 0;
+	left: 0;
+	z-index: 99;
 }
 
 section.rightMainContainer {
@@ -47,6 +50,7 @@ section.rightMainContainer {
 	height: 100%;
 	padding: 0 0 0 240px;
 	box-sizing: border-box;
+	position: absolute;
 }
 
 
@@ -58,6 +62,7 @@ section.rightMainContainer {
 	height: 72px;
 	/*border-bottom: 1px solid #a7a7a7;*/
 	padding: 0 22px;
+	padding-top: 6px;
 }
 
 .leftContainerSection .topLogo img {
@@ -104,4 +109,109 @@ section.rightMainContainer {
 .leftContainerSection nav dl dd a.active {
 	color: #e8e8e8;
 	font-weight: 500;
+}
+
+
+
+/*======= Right section main formating =======*/
+
+
+.rightMainContainer .sectionContent {
+	width: 90%;
+	max-width: 1160px;
+	margin: 0 auto;
+	position: relative;
+}
+
+.rightMainContainer .sectionContent h2 {
+	font-size: 24px;
+	font-weight: 400;
+	line-height: 32px;
+}
+
+.rightMainContainer .sectionContent p {
+	color: #212121;
+	font-size: 13px;
+	line-height: 24px;
+	margin: 0 0 .5em;
+	max-width: 760px;
+}
+
+.rightMainContainer .sectionContent h3 {
+	margin-top: 40px;
+	margin-bottom: 30px;
+	font-size: 18px;
+	font-weight: 500;
+	color: rgba(0, 0, 0, 0.54);
+}
+
+
+
+/*======= Right section - COLOR =======*/
+
+
+.rightMainContainer .sectionContent .colorCardContainer {
+	width: 100%;
+	min-height: 100px;
+}
+
+.rightMainContainer .sectionContent .colorCardContainer .colorCard {
+	height: 142px;
+	width: 100px;
+	padding: 0 15px;
+	display: inline-block;
+	text-align: center;
+}
+
+.rightMainContainer .sectionContent .colorCardContainer .colorCard .colorCircle {
+	height: 64px;
+	width: 64px;
+	border-radius: 50%;
+	margin: 15px auto;
+}
+
+.veryDarkGrey {
+	background: #5e5e5e;
+}
+
+.darkGrey {
+	background: #6e6e6e
+}
+
+.lightGrey {
+	background: #e8e8e8;
+}
+
+.mediumGrey {
+	background: #a7a7a7;
+}
+
+.orangeMedium {
+	background: #f16c4e;
+}
+
+.green {
+	background: #2be500;
+}
+
+.yellow {
+	background: #ffeb3b;
+}
+
+.blue {
+	background: #1be3e3;
+}
+
+.rightMainContainer .sectionContent .colorCardContainer .colorCard .colorName {
+	text-transform: uppercase;
+	font-size: 12px;
+	font-weight: 500;
+	padding: 4px 0;
+}
+
+.rightMainContainer .sectionContent .colorCardContainer .colorCard .colorCode {
+	font-size: 12px;
+	font-weight: 500;
+	padding: 2px 0;
+	color: #a7a7a7;
 }
