--- a/res/css/jahia_components.css
+++ b/res/css/jahia_components.css
@@ -22,7 +22,7 @@
 .button_iconButton {
 	background: none;
 	border: none;
-	color: #b9b9b9;
+	color: #a6a6a6;
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: 11px;
@@ -33,8 +33,13 @@
 	width: 80px;
 }
 
+.button_iconButton:hover {
+	color: #b9b9b9;
+	cursor: pointer;
+}
 
-/**/
+
+/* Custom button example */
 
 .customButtonTestContainer {
 	background-color: #ff8d00;
